# pyjelly

./: pyproject.toml
.github/workflows/: _build-wheels.yml  release.yml
pyjelly/: __init__.py
